# AI-Augmetnted-Deliberative-Committee

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
agents/community/: aisha_johnson.md  austin_business_owner.md  bronzeville_homeowner.md  david_washington.md  englewood_renter.md  james_kowalski.md  lincoln_park_homeowner.md  mei_lin_park.md  near_west_homeowner.md  pilsen_renter.md  rogers_park_renter.md  rosa_delgado.md  south_loop_renter.md  tom_brennan.md
agents/jury/: amara_osei.md  elena_vasquez.md  james_okafor.md  kevin_whitfield.md  marcus_thompson.md  patricia_reilly.md  sarah_chen.md
docs/: annex_ai_committee_implementation.md  case.md  com_new.md  comittee.md  project_motivation_readings.md  project_report.md  project_report.tex
docs/notebooks/: hpic_demo.ipynb  sample_proposal.md
docs/plans/: 2026-03-05-community-stakeholder-profiles-design.md
proposals/: draft.md
src/: __init__.py  agents.py  config.py  criteria.py  evaluation.py  output.py  personas.py  proposal_loader.py  simulate.py
tests/: conftest.py  test_agents.py  test_evaluation_suite.py  test_output.py  test_personas.py  test_proposal_loader.py
